Move to using fakeDisplay layers instead of manual composeLayers call in realitytabs.html example

--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -1117,11 +1117,6 @@ function animate(time, frame) {
     const {width, height} = renderer.getSize();
 
     renderer.render(scene, renderer.vr.enabled ? renderer.vr.getCamera(camera) : camera);
-
-    window.browser.composeLayers(
-      renderer.getContext(),
-      layers
-    );
   };
   _render();
 
@@ -1239,6 +1234,7 @@ if (navigator.xr && !query.fake) {
   camera.projectionMatrix.toArray(fakeDisplay._frameData.rightProjectionMatrix);
   fakeDisplay.position.set(0, 1.6, 0);
   const canvas = renderer.domElement;
+  fakeDisplay.layers = layers;
   fakeDisplay.enter({
     canvas,
     animate,
