--- a/launcher/exokit-launcher-win32-x64/resources/app/index.html
+++ b/launcher/exokit-launcher-win32-x64/resources/app/index.html
@@ -4,28 +4,109 @@
   <meta charset="UTF-8">
   <title>Exokit Launcher</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="App.css">
+
+  <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+
+  <!-- <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script> -->
+
+  <script>
+    const {ipcRenderer} = require('electron');
+
+    function launchTerminal(){
+      console.log(ipcRenderer.sendSync('synchronous-message', 'terminal')) // Launch Terminal from Node
+    }
+
+    function launchExoHome(){
+      console.log(ipcRenderer.sendSync('synchronous-message', 'exohome')) // Launch ExoHome from Node
+    }
+
+  </script>
 </head>
 <body>
-<h1>Welcome To Exokit!</h1>
-<img src="https://docs.webmr.io/img/ExokitLogo.png" height="100" width="100">
+
+<script src="renderer.js"></script>
 
 
-<div class="card" style="width: 18rem;">
-  <img class="card-img-top" src="https://docs.webmr.io/img/ExokitLogo.png" alt="Card image cap">
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+
+<div class="row p-3">
+  <div class="col-12 text-center mx-auto">
+    <h1 class="mx-auto">Welcome To Exokit!</h1>
+  </div>
+  <div class="col-12 text-center mx-auto">
+    <img src="https://docs.webmr.io/img/ExokitLogo.png" height="100" width="100" class="mx-auto">
   </div>
 </div>
-<div class="progress">
-  <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+
+<div class="row p-3">
+  <div class="col-6">
+    <h3>Settings/Flags</h3>
+    <form>
+      <div class="form-group">
+        <div class="custom-control custom-checkbox">
+          <input type="checkbox" class="custom-control-input" id="customCheck1">
+          <label class="custom-control-label" for="customCheck1"><code>-u</code> | Uncap FPS</label>
+        </div>
+        <div class="custom-control custom-checkbox">
+          <input type="checkbox" class="custom-control-input" id="customCheck2">
+          <label class="custom-control-label" for="customCheck2"><code>-p</code> | Performance Log to Console</label>
+        </div>
+        <div class="custom-control custom-checkbox">
+          <input type="checkbox" class="custom-control-input" id="customCheck3">
+          <label class="custom-control-label" for="customCheck3"><code>-x</code> | WebXR</label>
+        </div>
+      </div>
+      <button type="submit" class="btn btn-primary">Save</button>
+      <button type="submit" class="btn btn-primary">Defaults</button>
+    </form>
+  </div>
+
+  <div class="col-6">
+    <h3>News</h3>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block text-center mx-auto" src="https://i.ytimg.com/vi/1NpBvrDMYIo/maxresdefault.jpg" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block text-center mx-auto" src="https://i.ytimg.com/vi/prOh9OOY-M4/maxresdefault.jpg" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block text-center mx-auto" src="https://cdn-images-1.medium.com/max/2000/1*XdsMp25hIwODAA2O2Ef1TQ.png" alt="Third slide">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
 </div>
 
+<div class="row pt-5 p-3">
+  <div class="col-8">
+    <h5>Updates/Progress</h5>
+    <div class="progress">
+      <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+    </div>
+    <small>75%</small>
+  </div>
+  <div class="col-4">
+    <button type="submit" class="btn btn-primary" onclick="launchTerminal()">Launch Terminal</button>
+    <button type="submit" class="btn btn-primary" onclick="launchExoHome()">Launch Exo-Home</button>
+  </div>
+</div>
 
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
