Fake display API cleanup in realitytabs.html example

--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -1114,7 +1114,7 @@ function animate(time, frame) {
     // cubeMesh.rotation.y = (cubeMesh.rotation.y + timeDiff/1000 * Math.PI/2) % (Math.PI*2);
     cubeMesh.rotation.x = (cubeMesh.rotation.x + timeDiff/1000 * Math.PI/2) % (Math.PI*2);
 
-    const {width, height} = renderer.getSize();
+    // const {width, height} = renderer.getSize();
 
     renderer.render(scene, renderer.vr.enabled ? renderer.vr.getCamera(camera) : camera);
 
@@ -1237,7 +1237,7 @@ if (navigator.xr && !query.fake) {
   fakeDisplay.position.set(0, 1.6, 0);
   const canvas = renderer.domElement;
   fakeDisplay.enter({
-    canvas,
+    renderer,
     animate,
   });
 
