--- a/launcher/index.html
+++ b/launcher/index.html
@@ -5,6 +5,8 @@
   <title>Exokit Launcher</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="App.css">
+  <link href="https://fonts.googleapis.com/css?family=K2D" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 
   <script crossorigin src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
@@ -49,32 +51,70 @@
       ipcRenderer.send('asynchronous-message', 'exohome') // Launch ExoHome from Node
     }
 
-    checkVersion(){
+    updateExokit(){
       let progress = 0;
       ipcRenderer.on('asynchronous-reply', (event, arg) => {
         progress = (arg * 100).toFixed(0);
         this.setState({ progress: progress });
         console.log('Progress: ', progress);
       });
-      ipcRenderer.send('asynchronous-message', 'version')
+      ipcRenderer.send('asynchronous-message', 'update')
+    }
+
+    checkVersion(){
+      let versions = [];
+      ipcRenderer.on('asynchronous-reply', (event, arg) => {
+        console.log(arg);
+        versions.push(arg);
+        if(versions.length === 2){
+          if(versions[0] !== versions[1]){
+            console.log(versions[0], versions[1]);
+            console.log(versions[0].length, versions[1].length);
+            console.log('Your version is out of date');
+          }
+          else if(versions[0] === versions[1]){
+            console.log('Your version is up-to date')
+          }
+        }
+      });
+      ipcRenderer.send('asynchronous-message', 'version') // Launch ExoHome from Node
     }
 
     render() {
 
       return (
         <div>
-          <div className="row p-3">
-            <div className="col-12 text-center mx-auto">
-              <h1 className="mx-auto">Welcome To Exokit!</h1>
+          <div className="row p-2">
+            <div className="col-4">
+              <a href='https://twitter.com/webmixedreality'>
+                <i className="fab fa-twitter m-2"/>
+              </a>
+              <a href='https://medium.com/@avaerkazmer'>
+                <i className="fab fa-medium-m m-2"/>
+              </a>
+              <a href='https://www.instagram.com/exokitbrowser/'>
+                <i className="fab fa-instagram m-2"/>
+              </a>
+              <a href='https://www.facebook.com/webmixedreality/'>
+                <i className="fab fa-facebook m-2"/>
+              </a>
+              <a href='https://github.com/webmixedreality/emukit'>
+                <i className="fab fa-github m-2"/>
+              </a>
             </div>
-            <div className="col-12 text-center mx-auto">
+            <div className="col-4 text-center mx-auto">
               <img src="https://docs.webmr.io/img/ExokitLogo.png" height="100" width="100" className="mx-auto"/>
+            </div>
+            <div className="col-4">
+
             </div>
           </div>
 
-          <div className="row p-3">
-            <div className="col-6">
-              <h3>Settings/Flags</h3>
+          <div className="row">
+            <div className="col-1">
+            </div>
+            <div className="col-5">
+              <h3 className="text-center mx-auto">Settings</h3>
               <form>
                 <div className="form-group">
                   <div className="custom-control custom-checkbox">
@@ -90,14 +130,28 @@
                     <input type="checkbox" className="custom-control-input" id="customCheck3"/>
                       <label className="custom-control-label" htmlFor="customCheck3"><code>-x</code> | WebXR</label>
                   </div>
+                  <div className="custom-control custom-checkbox">
+                    <input type="checkbox" className="custom-control-input" id="customCheck4"/>
+                    <label className="custom-control-label" htmlFor="customCheck4"><code>-t</code> | Reality Tab</label>
+                  </div>
+                  <div className="custom-control custom-checkbox">
+                    <input type="checkbox" className="custom-control-input" id="customCheck5"/>
+                    <label className="custom-control-label" htmlFor="customCheck5"><code>-m</code> | Minimal Frame	</label>
+                  </div>
+                  <div className="custom-control custom-checkbox">
+                    <input type="checkbox" className="custom-control-input" id="customCheck6"/>
+                    <label className="custom-control-label" htmlFor="customCheck6"><code>-w</code> | WebGL	</label>
+                  </div>
                 </div>
-                <button type="submit" className="btn btn-primary">Save</button>
-                <button type="submit" className="btn btn-primary">Defaults</button>
+                <div className="form-inline d-inline">
+                  <input type="text" className="form-control" id="formGroupExampleInput" placeholder="Run with custom URL"/>
+                </div>
+                <button type="submit" className="btn btn-sm btnSecondary m-2 p-2">Save</button>
               </form>
             </div>
 
-            <div className="col-6">
-              <h3>News</h3>
+            <div className="col-5">
+              <h3 className="text-center">News</h3>
               <div id="carouselExampleIndicators" className="carousel slide" data-ride="carousel">
                 <ol className="carousel-indicators">
                   <li data-target="#carouselExampleIndicators" data-slide-to="0" className="active"/>
@@ -108,14 +162,26 @@
                   <div className="carousel-item active">
                     <img className="d-block text-center mx-auto"
                          src="https://i.ytimg.com/vi/1NpBvrDMYIo/maxresdefault.jpg" alt="First slide"/>
+                    <div className="carousel-caption d-none d-md-block">
+                      <h5>Follow us on Twitter</h5>
+                      <p>Stay up to speed with our latest updates.</p>
+                    </div>
                   </div>
                   <div className="carousel-item">
                     <img className="d-block text-center mx-auto"
-                         src="https://i.ytimg.com/vi/prOh9OOY-M4/maxresdefault.jpg" alt="Second slide"/>
+                         src="https://cdn-images-1.medium.com/max/1200/1*wzEf4qVNT7mUeMIeQWTJbg.jpeg" alt="Second slide"/>
+                    <div className="carousel-caption d-none d-md-block">
+                      <h5>Know how to code?</h5>
+                      <p>Check out our Github repo!</p>
+                    </div>
                   </div>
                   <div className="carousel-item">
                     <img className="d-block text-center mx-auto"
                          src="https://cdn-images-1.medium.com/max/2000/1*XdsMp25hIwODAA2O2Ef1TQ.png" alt="Third slide"/>
+                    <div className="carousel-caption d-none d-md-block">
+                      <h5>Read our latest Blog</h5>
+                      <p>Medium posts written by our dev team.</p>
+                    </div>
                   </div>
                 </div>
                 <a className="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -128,22 +194,25 @@
                 </a>
               </div>
             </div>
+
+            <div className="col-1">
+            </div>
           </div>
 
-            <div className="row pt-5 p-3">
+            <div className="row pt-3 pr-2 pl-2 fixed-bottom">
               <div className="col-8">
-                <h5>Updates/Progress</h5>
+                <button type="submit" className="btn d-inline mb-2 btnThird btn-sm" onClick={() => this.checkVersion()}>Check Version</button>
+                <h5 className="">Updates</h5>
                 <div className="progress">
                   <div className="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar" style={{"width": this.state.progress + "%"}}
                        aria-valuenow={this.state.progress} aria-valuemin="0" aria-valuemax="100"/>
                 </div>
-                <small>{this.state.progress}</small>
+                <p className="text-center">{this.state.progress}%</p>
               </div>
               <div className="col-4">
-                <button type="submit" className="btn btn-primary" onClick={() => this.launchTerminal()}>Launch Terminal</button>
-                <button type="submit" className="btn btn-secondary" onClick={() => this.launchExoHome()}>Launch Exo-Home</button>
-                <button type="submit" className="btn btn-warning" onClick={() => this.checkVersion()}>Check Version</button>
-
+                <h5>Launch</h5>
+                <button type="submit" className="btn m-2" onClick={() => this.launchTerminal()}>Terminal</button>
+                <button type="submit" className="btn m-2" onClick={() => this.launchExoHome()}>Exo-Home</button>
               </div>
             </div>
 
